FIPS-6976/FIPS-7544 :: Add IPS nature for module projects
Change-Id: Ib2d79fc608c253205e894f95a9cdf747e4a961e7